---
source: tests/test_noseyparker_help.rs
expression: stdout
---
Scan content for secrets

Usage: noseyparker scan [OPTIONS] --datastore <PATH> [INPUT]...

Options:
  -d, --datastore <PATH>  Use the specified datastore path [env: NP_DATASTORE=]
  -j, --jobs <N>          The number of parallel scanning jobs [default: DEFAULT]
  -r, --rules <PATH>      Path of custom rules to use
  -h, --help              Print help (see more with '--help')

Input Specifier Options:
  [INPUT]...                    Path to a file, directory, or local Git repository to scan
      --git-url <URL>               URL of a Git repository to clone and scan
      --github-organization <NAME>  Name of a  GitHub organization to enumerate and scan [aliases:
                                    github-org]
      --github-user <NAME>          Name of a GitHub user to enumerate and scan

Content Discovery Options:
      --max-file-size <MEGABYTES>  Do not scan files larger than the specified size [default: 100]
  -i, --ignore <FILE>              Path of a custom ignore rules file to use

Global Options:
  -v, --verbose...       Enable verbose output
      --color <MODE>     Enable or disable colored output [default: auto] [possible values: auto,
                         never, always]
      --progress <MODE>  Enable or disable progress bars [default: auto] [possible values: auto,
                         never, always]

